--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,37 +1,39 @@
 {
-  "name": "frontend",
+  "name": "okna",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "scripts": {
-    "test": "jest",
-    "start": "parcel src/index.pug",
-    "build": "parcel build src/index.pug -d dist --public-url ./"
+    "clean": "rm dist/bundle.js",
+    "start": "webpack-dev-server --mode development --open ",
+    "build-prod": "webpack -p --mode production"
   },
+  "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "babel-jest": "^24.8.0",
-    "cssnano": "^4.1.10",
-    "inputmask": "^4.0.8",
-    "jest": "^24.8.0",
-    "parcel-bundler": "^1.12.3",
-    "pgwslider": "^2.3.1",
-    "postcss-grouper": "0.0.5",
-    "postcss-modules": "^1.4.1",
-    "postcss-sort-style-rules": "^0.2.0",
-    "postcss-sorting": "^5.0.0",
-    "pug": "^2.0.3",
-    "sass": "^1.20.1",
-    "stylelint": "^10.0.1",
-    "stylelint-config-recommended": "^2.2.0",
-    "stylelint-order": "^3.0.0"
-  },
-  "dependencies": {
-    "jq": "^1.7.2",
-    "jquery": "^3.4.1",
-    "jquery-ui": "^1.12.1"
-  },
-  "author": "RokeAlvo",
-  "license": "ISC"
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.5.1",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "file-loader": "^4.2.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
+    "postcss-loader": "^3.0.0",
+    "prettier": "^1.18.2",
+    "pug": "^2.0.4",
+    "pug-loader": "^2.4.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
+    "url-loader": "^2.2.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2"
+  }
 }
