--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,12 @@
   "scripts": {
     "clean": "rm dist/bundle.js",
     "start": "webpack-dev-server --mode development --open ",
-    "build-prod": "webpack -p --mode production"
+    "build-prod": "webpack -p --mode production",
+    "build": "webpack  --mode development"
   },
-  "dependencies": {},
+  "dependencies": {
+    "parcel": "^2.0.0-alpha.2.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
