--- a/package.json
+++ b/package.json
@@ -10,12 +10,37 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.16.2",
-        "bootstrap-sass": "^3.3.7",
-        "cross-env": "^5.0.1",
-        "jquery": "^3.1.1",
-        "laravel-mix": "^1.0",
-        "lodash": "^4.17.4",
-        "vue": "^2.1.10"
+        "ajv": "^6.9.1",
+        "axios": "^0.19.0",
+        "bootstrap-sass": "3.3.7",
+        "cross-env": "5.0.1",
+        "fibers": "^4.0.2",
+        "jquery": "^3.4.1",
+        "laravel-mix": "^5.0.0",
+        "lodash": "^4.17.15",
+        "node-sass": "^4.13.0",
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.23.7",
+        "sass-loader": "^8.0.0",
+        "vue": "^2.6.10",
+        "vue-template-compiler": "^2.6.10",
+        "webpack": "^4.41.2"
+    },
+    "dependencies": {
+        "2gis-maps": "^3.5.12",
+        "@cookieseater/vue-yandex-share": "^0.2.1",
+        "braces": "^3.0.2",
+        "v-money": "^0.8.1",
+        "v-show-slide": "^1.8.1",
+        "vue-awesome-swiper": "^3.1.3",
+        "vue-content-loader": "^0.2.2",
+        "vue-inputmask": "^0.2.1",
+        "vue-izitoast": "^1.2.1",
+        "vue-lazyload": "^1.3.3",
+        "vue-router": "^3.1.3",
+        "vue-select": "^3.2.0",
+        "vue-slider-component": "^3.0.43",
+        "vue-yandex-metrika": "^1.8.3",
+        "vuex": "^3.1.2"
     }
 }
