--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
         "axios": "^0.19.0",
         "bootstrap-sass": "3.3.7",
         "cross-env": "5.0.1",
+        "css-loader": "^3.2.0",
         "fibers": "^4.0.2",
         "jquery": "^3.4.1",
         "laravel-mix": "^5.0.0",
         "lodash": "^4.17.15",
         "node-sass": "^4.13.0",
+        "pug": "^2.0.4",
+        "pug-plain-loader": "^1.0.0",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.23.7",
         "sass-loader": "^8.0.0",
+        "style-loader": "^1.0.0",
+        "style-resources-loader": "^1.3.2",
         "vue": "^2.6.10",
         "vue-template-compiler": "^2.6.10",
         "webpack": "^4.41.2"
@@ -30,16 +35,19 @@
         "2gis-maps": "^3.5.12",
         "@cookieseater/vue-yandex-share": "^0.2.1",
         "braces": "^3.0.2",
+        "hooper": "^0.3.4",
         "v-money": "^0.8.1",
         "v-show-slide": "^1.8.1",
         "vue-awesome-swiper": "^3.1.3",
         "vue-content-loader": "^0.2.2",
         "vue-inputmask": "^0.2.1",
         "vue-izitoast": "^1.2.1",
+        "vue-js-modal": "^1.3.31",
         "vue-lazyload": "^1.3.3",
         "vue-router": "^3.1.3",
         "vue-select": "^3.2.0",
         "vue-slider-component": "^3.0.43",
+        "vue-the-mask": "^0.11.1",
         "vue-yandex-metrika": "^1.8.3",
         "vuex": "^3.1.2"
     }
